# hri-fp

./: README.md
map/: tata.pgm  tata.yaml
ros2_ws/: audio.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/control_architecture_pkg/lib/control_architecture_pkg/: robot_control_architecture_node
ros2_ws/install/control_architecture_pkg/share/control_architecture_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/robot_control_architecture_pkg/lib/robot_control_architecture_pkg/: robot_control_architecture_node
ros2_ws/install/robot_control_architecture_pkg/share/robot_control_architecture_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/control_architecture_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_control_architecture_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_control_architecture_pkg/robot_control_architecture_pkg/: robot_control_architecture_node.py
