<?xml version="1.0"?>
<package format="3">
  <name>robot_control_architecture_pkg</name>
  <version>0.0.1</version>
  <description>ROS 2 package for a robot control architecture that approaches a person while avoiding obstacles using a finite state machine.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
